Appointment route and swagger updated
